src/sql/yy/sql.output
Grammar

    0 $accept: query "end of file"

    1 query: select_stmt from_stmt where_stmt group_by_stmt having_stmt order_by_stmt

    2 select_stmt: "SELECT" select_fields
    3            | "SELECT" "DISTINCT" select_fields

    4 select_fields: select_field
    5              | select_fields "," select_field

    6 select_field: "*" as_alias
    7             | "star_identifier" as_alias
    8             | expr as_alias

    9 as_alias: %empty
   10         | "AS" "identifier"

   11 from_stmt: "FROM" "identifier"

   12 where_stmt: %empty
   13           | "WHERE" boolean_expr

   14 boolean_expr: "(" boolean_expr ")"
   15             | boolean_expr "AND" boolean_expr
   16             | boolean_expr "OR" boolean_expr
   17             | expr "=" expr
   18             | expr "!=" expr
   19             | expr ">" expr
   20             | expr "<" expr
   21             | expr ">=" expr
   22             | expr "<=" expr
   23             | expr "LIKE" expr
   24             | "identifier" "IS" "NULL"
   25             | "identifier" "IS" "NOT" "NULL"

   26 exprs: %empty
   27      | exprs1

   28 exprs1: expr
   29       | exprs1 "," expr

   30 expr: "(" expr ")"
   31     | expr "+" expr
   32     | expr "-" expr
   33     | expr "*" expr
   34     | expr "/" expr
   35     | "-" expr
   36     | "identifier" "(" exprs ")"
   37     | "identifier"
   38     | "string"
   39     | "long"
   40     | "double"
   41     | "bool"

   42 group_by_stmt: %empty
   43              | "GROUP" "BY" group_by_fields

   44 group_by_fields: group_by_field
   45                | group_by_fields "," group_by_field

   46 group_by_field: "identifier"

   47 having_stmt: %empty
   48            | "HAVING" boolean_expr

   49 order_by_stmt: %empty
   50              | "ORDER" "BY" order_by_fields

   51 order_by_fields: order_by_field
   52                | order_by_fields "," order_by_field

   53 order_by_field: expr
   54               | expr "ASC"
   55               | expr "DESC"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"SELECT" (258) 2 3
"FROM" (259) 11
"WHERE" (260) 13
"GROUP" (261) 43
"HAVING" (262) 48
"ORDER" (263) 50
"BY" (264) 43 50
"AS" (265) 10
"," (266) 5 29 45 52
"+" (267) 31
"-" (268) 32 35
"*" (269) 6 33
"/" (270) 34
"=" (271) 17
"!=" (272) 18
"<" (273) 20
">" (274) 19
"<=" (275) 22
">=" (276) 21
"LIKE" (277) 23
"IS" (278) 24 25
"NOT" (279) 25
"NULL" (280) 24 25
"AND" (281) 15
"OR" (282) 16
"(" (283) 14 30 36
")" (284) 14 30 36
"DISTINCT" (285) 3
"ASC" (286) 54
"DESC" (287) 55
"identifier" (288) 10 11 24 25 36 37 46
"star_identifier" (289) 7
"string" (290) 38
"long" (291) 39
"double" (292) 40
"bool" (293) 41
UMINUS (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
query (41)
    on left: 1, on right: 0
select_stmt (42)
    on left: 2 3, on right: 1
select_fields (43)
    on left: 4 5, on right: 2 3 5
select_field (44)
    on left: 6 7 8, on right: 4 5
as_alias (45)
    on left: 9 10, on right: 6 7 8
from_stmt (46)
    on left: 11, on right: 1
where_stmt (47)
    on left: 12 13, on right: 1
boolean_expr (48)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25, on right: 13 14 15
    16 48
exprs (49)
    on left: 26 27, on right: 36
exprs1 (50)
    on left: 28 29, on right: 27 29
expr (51)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 8 17 18
    19 20 21 22 23 28 29 30 31 32 33 34 35 53 54 55
group_by_stmt (52)
    on left: 42 43, on right: 1
group_by_fields (53)
    on left: 44 45, on right: 43 45
group_by_field (54)
    on left: 46, on right: 44 45
having_stmt (55)
    on left: 47 48, on right: 1
order_by_stmt (56)
    on left: 49 50, on right: 1
order_by_fields (57)
    on left: 51 52, on right: 50 52
order_by_field (58)
    on left: 53 54 55, on right: 51 52


State 0

    0 $accept: . query "end of file"
    1 query: . select_stmt from_stmt where_stmt group_by_stmt having_stmt order_by_stmt
    2 select_stmt: . "SELECT" select_fields
    3            | . "SELECT" "DISTINCT" select_fields

    "SELECT"  shift, and go to state 1

    query        go to state 2
    select_stmt  go to state 3


State 1

    2 select_stmt: "SELECT" . select_fields
    3            | "SELECT" . "DISTINCT" select_fields
    4 select_fields: . select_field
    5              | . select_fields "," select_field
    6 select_field: . "*" as_alias
    7             | . "star_identifier" as_alias
    8             | . expr as_alias
   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"                shift, and go to state 4
    "*"                shift, and go to state 5
    "("                shift, and go to state 6
    "DISTINCT"         shift, and go to state 7
    "identifier"       shift, and go to state 8
    "star_identifier"  shift, and go to state 9
    "string"           shift, and go to state 10
    "long"             shift, and go to state 11
    "double"           shift, and go to state 12
    "bool"             shift, and go to state 13

    select_fields  go to state 14
    select_field   go to state 15
    expr           go to state 16


State 2

    0 $accept: query . "end of file"

    "end of file"  shift, and go to state 17


State 3

    1 query: select_stmt . from_stmt where_stmt group_by_stmt having_stmt order_by_stmt
   11 from_stmt: . "FROM" "identifier"

    "FROM"  shift, and go to state 18

    from_stmt  go to state 19


State 4

   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   35     | "-" . expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 6
    "identifier"  shift, and go to state 8
    "string"      shift, and go to state 10
    "long"        shift, and go to state 11
    "double"      shift, and go to state 12
    "bool"        shift, and go to state 13

    expr  go to state 20


State 5

    6 select_field: "*" . as_alias
    9 as_alias: . %empty  ["FROM", ","]
   10         | . "AS" "identifier"

    "AS"  shift, and go to state 21

    $default  reduce using rule 9 (as_alias)

    as_alias  go to state 22


State 6

   30 expr: . "(" expr ")"
   30     | "(" . expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 6
    "identifier"  shift, and go to state 8
    "string"      shift, and go to state 10
    "long"        shift, and go to state 11
    "double"      shift, and go to state 12
    "bool"        shift, and go to state 13

    expr  go to state 23


State 7

    3 select_stmt: "SELECT" "DISTINCT" . select_fields
    4 select_fields: . select_field
    5              | . select_fields "," select_field
    6 select_field: . "*" as_alias
    7             | . "star_identifier" as_alias
    8             | . expr as_alias
   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"                shift, and go to state 4
    "*"                shift, and go to state 5
    "("                shift, and go to state 6
    "identifier"       shift, and go to state 8
    "star_identifier"  shift, and go to state 9
    "string"           shift, and go to state 10
    "long"             shift, and go to state 11
    "double"           shift, and go to state 12
    "bool"             shift, and go to state 13

    select_fields  go to state 24
    select_field   go to state 15
    expr           go to state 16


State 8

   36 expr: "identifier" . "(" exprs ")"
   37     | "identifier" .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "*", "/", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]

    "("  shift, and go to state 25

    $default  reduce using rule 37 (expr)


State 9

    7 select_field: "star_identifier" . as_alias
    9 as_alias: . %empty  ["FROM", ","]
   10         | . "AS" "identifier"

    "AS"  shift, and go to state 21

    $default  reduce using rule 9 (as_alias)

    as_alias  go to state 26


State 10

   38 expr: "string" .

    $default  reduce using rule 38 (expr)


State 11

   39 expr: "long" .

    $default  reduce using rule 39 (expr)


State 12

   40 expr: "double" .

    $default  reduce using rule 40 (expr)


State 13

   41 expr: "bool" .

    $default  reduce using rule 41 (expr)


State 14

    2 select_stmt: "SELECT" select_fields .  ["FROM"]
    5 select_fields: select_fields . "," select_field

    ","  shift, and go to state 27

    $default  reduce using rule 2 (select_stmt)


State 15

    4 select_fields: select_field .

    $default  reduce using rule 4 (select_fields)


State 16

    8 select_field: expr . as_alias
    9 as_alias: . %empty  ["FROM", ","]
   10         | . "AS" "identifier"
   31 expr: expr . "+" expr
   32     | expr . "-" expr
   33     | expr . "*" expr
   34     | expr . "/" expr

    "AS"  shift, and go to state 21
    "+"   shift, and go to state 28
    "-"   shift, and go to state 29
    "*"   shift, and go to state 30
    "/"   shift, and go to state 31

    $default  reduce using rule 9 (as_alias)

    as_alias  go to state 32


State 17

    0 $accept: query "end of file" .

    $default  accept


State 18

   11 from_stmt: "FROM" . "identifier"

    "identifier"  shift, and go to state 33


State 19

    1 query: select_stmt from_stmt . where_stmt group_by_stmt having_stmt order_by_stmt
   12 where_stmt: . %empty  ["end of file", "GROUP", "HAVING", "ORDER"]
   13           | . "WHERE" boolean_expr

    "WHERE"  shift, and go to state 34

    $default  reduce using rule 12 (where_stmt)

    where_stmt  go to state 35


State 20

   31 expr: expr . "+" expr
   32     | expr . "-" expr
   33     | expr . "*" expr
   34     | expr . "/" expr
   35     | "-" expr .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "*", "/", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]

    $default  reduce using rule 35 (expr)

    Conflict between rule 35 and token "+" resolved as reduce ("+" < UMINUS).
    Conflict between rule 35 and token "-" resolved as reduce ("-" < UMINUS).
    Conflict between rule 35 and token "*" resolved as reduce ("*" < UMINUS).
    Conflict between rule 35 and token "/" resolved as reduce ("/" < UMINUS).


State 21

   10 as_alias: "AS" . "identifier"

    "identifier"  shift, and go to state 36


State 22

    6 select_field: "*" as_alias .

    $default  reduce using rule 6 (select_field)


State 23

   30 expr: "(" expr . ")"
   31     | expr . "+" expr
   32     | expr . "-" expr
   33     | expr . "*" expr
   34     | expr . "/" expr

    "+"  shift, and go to state 28
    "-"  shift, and go to state 29
    "*"  shift, and go to state 30
    "/"  shift, and go to state 31
    ")"  shift, and go to state 37


State 24

    3 select_stmt: "SELECT" "DISTINCT" select_fields .  ["FROM"]
    5 select_fields: select_fields . "," select_field

    ","  shift, and go to state 27

    $default  reduce using rule 3 (select_stmt)


State 25

   26 exprs: . %empty  [")"]
   27      | . exprs1
   28 exprs1: . expr
   29       | . exprs1 "," expr
   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   36     | "identifier" "(" . exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 6
    "identifier"  shift, and go to state 8
    "string"      shift, and go to state 10
    "long"        shift, and go to state 11
    "double"      shift, and go to state 12
    "bool"        shift, and go to state 13

    $default  reduce using rule 26 (exprs)

    exprs   go to state 38
    exprs1  go to state 39
    expr    go to state 40


State 26

    7 select_field: "star_identifier" as_alias .

    $default  reduce using rule 7 (select_field)


State 27

    5 select_fields: select_fields "," . select_field
    6 select_field: . "*" as_alias
    7             | . "star_identifier" as_alias
    8             | . expr as_alias
   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"                shift, and go to state 4
    "*"                shift, and go to state 5
    "("                shift, and go to state 6
    "identifier"       shift, and go to state 8
    "star_identifier"  shift, and go to state 9
    "string"           shift, and go to state 10
    "long"             shift, and go to state 11
    "double"           shift, and go to state 12
    "bool"             shift, and go to state 13

    select_field  go to state 41
    expr          go to state 16


State 28

   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   31     | expr "+" . expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 6
    "identifier"  shift, and go to state 8
    "string"      shift, and go to state 10
    "long"        shift, and go to state 11
    "double"      shift, and go to state 12
    "bool"        shift, and go to state 13

    expr  go to state 42


State 29

   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   32     | expr "-" . expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 6
    "identifier"  shift, and go to state 8
    "string"      shift, and go to state 10
    "long"        shift, and go to state 11
    "double"      shift, and go to state 12
    "bool"        shift, and go to state 13

    expr  go to state 43


State 30

   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   33     | expr "*" . expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 6
    "identifier"  shift, and go to state 8
    "string"      shift, and go to state 10
    "long"        shift, and go to state 11
    "double"      shift, and go to state 12
    "bool"        shift, and go to state 13

    expr  go to state 44


State 31

   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   34     | expr "/" . expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 6
    "identifier"  shift, and go to state 8
    "string"      shift, and go to state 10
    "long"        shift, and go to state 11
    "double"      shift, and go to state 12
    "bool"        shift, and go to state 13

    expr  go to state 45


State 32

    8 select_field: expr as_alias .

    $default  reduce using rule 8 (select_field)


State 33

   11 from_stmt: "FROM" "identifier" .

    $default  reduce using rule 11 (from_stmt)


State 34

   13 where_stmt: "WHERE" . boolean_expr
   14 boolean_expr: . "(" boolean_expr ")"
   15             | . boolean_expr "AND" boolean_expr
   16             | . boolean_expr "OR" boolean_expr
   17             | . expr "=" expr
   18             | . expr "!=" expr
   19             | . expr ">" expr
   20             | . expr "<" expr
   21             | . expr ">=" expr
   22             | . expr "<=" expr
   23             | . expr "LIKE" expr
   24             | . "identifier" "IS" "NULL"
   25             | . "identifier" "IS" "NOT" "NULL"
   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 46
    "identifier"  shift, and go to state 47
    "string"      shift, and go to state 10
    "long"        shift, and go to state 11
    "double"      shift, and go to state 12
    "bool"        shift, and go to state 13

    boolean_expr  go to state 48
    expr          go to state 49


State 35

    1 query: select_stmt from_stmt where_stmt . group_by_stmt having_stmt order_by_stmt
   42 group_by_stmt: . %empty  ["end of file", "HAVING", "ORDER"]
   43              | . "GROUP" "BY" group_by_fields

    "GROUP"  shift, and go to state 50

    $default  reduce using rule 42 (group_by_stmt)

    group_by_stmt  go to state 51


State 36

   10 as_alias: "AS" "identifier" .

    $default  reduce using rule 10 (as_alias)


State 37

   30 expr: "(" expr ")" .

    $default  reduce using rule 30 (expr)


State 38

   36 expr: "identifier" "(" exprs . ")"

    ")"  shift, and go to state 52


State 39

   27 exprs: exprs1 .  [")"]
   29 exprs1: exprs1 . "," expr

    ","  shift, and go to state 53

    $default  reduce using rule 27 (exprs)


State 40

   28 exprs1: expr .  [",", ")"]
   31 expr: expr . "+" expr
   32     | expr . "-" expr
   33     | expr . "*" expr
   34     | expr . "/" expr

    "+"  shift, and go to state 28
    "-"  shift, and go to state 29
    "*"  shift, and go to state 30
    "/"  shift, and go to state 31

    $default  reduce using rule 28 (exprs1)


State 41

    5 select_fields: select_fields "," select_field .

    $default  reduce using rule 5 (select_fields)


State 42

   31 expr: expr . "+" expr
   31     | expr "+" expr .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]
   32     | expr . "-" expr
   33     | expr . "*" expr
   34     | expr . "/" expr

    "*"  shift, and go to state 30
    "/"  shift, and go to state 31

    $default  reduce using rule 31 (expr)

    Conflict between rule 31 and token "+" resolved as reduce (%left "+").
    Conflict between rule 31 and token "-" resolved as reduce (%left "-").
    Conflict between rule 31 and token "*" resolved as shift ("+" < "*").
    Conflict between rule 31 and token "/" resolved as shift ("+" < "/").


State 43

   31 expr: expr . "+" expr
   32     | expr . "-" expr
   32     | expr "-" expr .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]
   33     | expr . "*" expr
   34     | expr . "/" expr

    "*"  shift, and go to state 30
    "/"  shift, and go to state 31

    $default  reduce using rule 32 (expr)

    Conflict between rule 32 and token "+" resolved as reduce (%left "+").
    Conflict between rule 32 and token "-" resolved as reduce (%left "-").
    Conflict between rule 32 and token "*" resolved as shift ("-" < "*").
    Conflict between rule 32 and token "/" resolved as shift ("-" < "/").


State 44

   31 expr: expr . "+" expr
   32     | expr . "-" expr
   33     | expr . "*" expr
   33     | expr "*" expr .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "*", "/", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]
   34     | expr . "/" expr

    $default  reduce using rule 33 (expr)

    Conflict between rule 33 and token "+" resolved as reduce ("+" < "*").
    Conflict between rule 33 and token "-" resolved as reduce ("-" < "*").
    Conflict between rule 33 and token "*" resolved as reduce (%left "*").
    Conflict between rule 33 and token "/" resolved as reduce (%left "/").


State 45

   31 expr: expr . "+" expr
   32     | expr . "-" expr
   33     | expr . "*" expr
   34     | expr . "/" expr
   34     | expr "/" expr .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "*", "/", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]

    $default  reduce using rule 34 (expr)

    Conflict between rule 34 and token "+" resolved as reduce ("+" < "/").
    Conflict between rule 34 and token "-" resolved as reduce ("-" < "/").
    Conflict between rule 34 and token "*" resolved as reduce (%left "*").
    Conflict between rule 34 and token "/" resolved as reduce (%left "/").


State 46

   14 boolean_expr: . "(" boolean_expr ")"
   14             | "(" . boolean_expr ")"
   15             | . boolean_expr "AND" boolean_expr
   16             | . boolean_expr "OR" boolean_expr
   17             | . expr "=" expr
   18             | . expr "!=" expr
   19             | . expr ">" expr
   20             | . expr "<" expr
   21             | . expr ">=" expr
   22             | . expr "<=" expr
   23             | . expr "LIKE" expr
   24             | . "identifier" "IS" "NULL"
   25             | . "identifier" "IS" "NOT" "NULL"
   30 expr: . "(" expr ")"
   30     | "(" . expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 46
    "identifier"  shift, and go to state 47
    "string"      shift, and go to state 10
    "long"        shift, and go to state 11
    "double"      shift, and go to state 12
    "bool"        shift, and go to state 13

    boolean_expr  go to state 54
    expr          go to state 55


State 47

   24 boolean_expr: "identifier" . "IS" "NULL"
   25             | "identifier" . "IS" "NOT" "NULL"
   36 expr: "identifier" . "(" exprs ")"
   37     | "identifier" .  ["+", "-", "*", "/", "=", "!=", "<", ">", "<=", ">=", "LIKE", ")"]

    "IS"  shift, and go to state 56
    "("   shift, and go to state 25

    $default  reduce using rule 37 (expr)


State 48

   13 where_stmt: "WHERE" boolean_expr .  ["end of file", "GROUP", "HAVING", "ORDER"]
   15 boolean_expr: boolean_expr . "AND" boolean_expr
   16             | boolean_expr . "OR" boolean_expr

    "AND"  shift, and go to state 57
    "OR"   shift, and go to state 58

    $default  reduce using rule 13 (where_stmt)


State 49

   17 boolean_expr: expr . "=" expr
   18             | expr . "!=" expr
   19             | expr . ">" expr
   20             | expr . "<" expr
   21             | expr . ">=" expr
   22             | expr . "<=" expr
   23             | expr . "LIKE" expr
   31 expr: expr . "+" expr
   32     | expr . "-" expr
   33     | expr . "*" expr
   34     | expr . "/" expr

    "+"     shift, and go to state 28
    "-"     shift, and go to state 29
    "*"     shift, and go to state 30
    "/"     shift, and go to state 31
    "="     shift, and go to state 59
    "!="    shift, and go to state 60
    "<"     shift, and go to state 61
    ">"     shift, and go to state 62
    "<="    shift, and go to state 63
    ">="    shift, and go to state 64
    "LIKE"  shift, and go to state 65


State 50

   43 group_by_stmt: "GROUP" . "BY" group_by_fields

    "BY"  shift, and go to state 66


State 51

    1 query: select_stmt from_stmt where_stmt group_by_stmt . having_stmt order_by_stmt
   47 having_stmt: . %empty  ["end of file", "ORDER"]
   48            | . "HAVING" boolean_expr

    "HAVING"  shift, and go to state 67

    $default  reduce using rule 47 (having_stmt)

    having_stmt  go to state 68


State 52

   36 expr: "identifier" "(" exprs ")" .

    $default  reduce using rule 36 (expr)


State 53

   29 exprs1: exprs1 "," . expr
   30 expr: . "(" expr ")"
   31     | . expr "+" expr
   32     | . expr "-" expr
   33     | . expr "*" expr
   34     | . expr "/" expr
   35     | . "-" expr
   36     | . "identifier" "(" exprs ")"
   37     | . "identifier"
   38     | . "string"
   39     | . "long"
   40     | . "double"
   41     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 6
    "identifier"  shift, and go to state 8
    "string"      shift, and go to state 10
    "long"        shift, and go to state 11
    "double"      shift, and go to state 12
    "bool"        shift, and go to state 13

    expr  go to state 69


State 54

   14 boolean_expr: "(" boolean_expr . ")"
   15             | boolean_expr . "AND" boolean_expr
   16             | boolean_expr . "OR" boolean_expr

    "AND"  shift, and go to state 57
    "OR"   shift, and go to state 58
    ")"    shift, and go to state 70


State 55

   17 boolean_expr: expr . "=" expr
   18             | expr . "!=" expr
   19             | expr . ">" expr
   20             | expr . "<" expr
   21             | expr . ">=" expr
   22             | expr . "<=" expr
   23             | expr . "LIKE" expr
   30 expr: "(" expr . ")"
   31     | expr . "+" expr
   32     | expr . "-" expr
   33     | expr . "*" expr
   34     | expr . "/" expr

    "+"     shift, and go to state 28
    "-"     shift, and go to state 29
    "*"     shift, and go to state 30
    "/"     shift, and go to state 31
    "="     shift, and go to state 59
    "!="    shift, and go to state 60
    "<"     shift, and go to state 61
    ">"     shift, and go to state 62
    "<="    shift, and go to state 63
    ">="    shift, and go to state 64
    "LIKE"  shift, and go to state 65
    ")"     shift, and go to state 37


State 56

   24 boolean_expr: "identifier" "IS" . "NULL"
   25             | "identifier" "IS" . "NOT" "NULL"

    "NOT"   shift, and go to state 71
    "NULL"  shift, and go to state 72


State 57
